<resources>
    <string name="app_name">Strip NeoPixel</string>
    <string name="action_settings">Settings</string>
    <string name="schemes_label">Schemes :</string>
    <string name="animations_label">Animations :</string>
    <string name="patterns_label">Patterns</string>
    <string name="btn_pause">Off</string>

    <string-array name="schemes_array">
        <item>Select scheme</item>
        <item>Plain</item>
        <item>RGB</item>
        <item>Christmas</item>
        <item>Hanukkah</item>
        <item>Kwanzaa</item>
        <item>Rainbow</item>
        <item>Fire</item>
    </string-array>
    <string-array name="patterns_array">
        <item>Select Pattern</item>
        <item>Bars</item>
        <item>Gradient</item>
    </string-array>
    <string-array name="animations_array">
        <item>Select Animation</item>
        <item>Rainbow</item>
        <item>Rainbow Cycle</item>
        <item>Color Wipe</item>
        <item>Theater Chase</item>
        <item>Theater Chase Rainbow</item>
        <item>Random</item>
    </string-array>
    <string-array name="width_array">
        <item>Select Width</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="title_activity_settings">Paramètres</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="address_ip">Adresse IP</string>
    <string name="widths_label">Width</string>
</resources>
